--- a/src/css/app.css
+++ b/src/css/app.css
@@ -21,10 +21,11 @@ body {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-h1 {
+h1, h2, h3 {
   font-size: 2em;
   margin-bottom: 20px;
   text-align: center;
+  color: black;
 }
 
 label {
