--- a/src/css/app.css
+++ b/src/css/app.css
@@ -21,11 +21,10 @@ body {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-h1, h2, h3 {
+h1 {
   font-size: 2em;
   margin-bottom: 20px;
   text-align: center;
-  color: black;
 }
 
 label {
@@ -67,6 +66,6 @@ button:hover {
   background-color: #666; /* Color de fondo ligeramente más oscuro al pasar el mouse */
 }
 
-th{
+th, h2, h3{
     color: black;
 }
