--- a/src/css/app.css
+++ b/src/css/app.css
@@ -66,6 +66,6 @@ button:hover {
   background-color: #666; /* Color de fondo ligeramente más oscuro al pasar el mouse */
 }
 
-th, h2, h3{
+th, h2, h3, td{
     color: black;
 }
