--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,9 +1,13 @@
 /* Estilos generales */
 
-body {
-  font-family: Arial, sans-serif;
+* {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Arial, sans-serif;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -12,60 +16,60 @@ body {
   color: #fff; /* Color de texto claro */
 }
 
-.container {
+.home-container {
   max-width: 800px;
-  margin: 0 auto;
+  margin: 20px;
   padding: 20px;
   background-color: #444; /* Color de fondo oscuro ligeramente más claro */
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  text-align: center;
 }
 
 h1 {
   font-size: 2em;
   margin-bottom: 20px;
-  text-align: center;
-}
-
-label {
-  display: block;
-  margin-top: 15px;
-  font-weight: bold;
-}
-
-input,
-select {
-  width: 100%;
-  padding: 10px;
-  margin-top: 5px;
-  border: 1px solid #777; /* Borde ligeramente más claro */
-  border-radius: 4px;
-  box-sizing: border-box;
-  background-color: #555; /* Color de fondo oscuro */
   color: #fff; /* Color de texto claro */
 }
 
-.buttons {
+.button-container {
   display: flex;
-  justify-content: center; /* Centrar los botones horizontalmente */
-  margin-top: 20px;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
 }
 
 button {
   background-color: #777; /* Color de fondo ligeramente más claro */
-  color: #fff; /* Color de texto claro */
+  color: #00e222; /* Color de texto claro */
   padding: 10px 20px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
   font-size: 1em;
-  margin: 0 10px; /* Espaciado entre botones */
+  width: 100%; /* Hace que los botones ocupen todo el ancho del contenedor */
+  max-width: 300px; /* Limita el ancho máximo de los botones */
 }
 
 button:hover {
   background-color: #666; /* Color de fondo ligeramente más oscuro al pasar el mouse */
 }
 
-th, h2, h3, td, p{
-    color: black;
+a {
+  text-decoration: none;
+}
+
+h2,h3,th,td{
+  color: black;
+}
+
+@media (min-width: 600px) {
+  .button-container {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  button {
+    margin: 10px;
+  }
 }
